# jtcg-ai-engineer

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  main_auto.py  makefile  pyproject.toml  seed_data.py
agent/: agent.py  agent_auto.py  const.py  event.py  schemas.py  tools.py
config/: env.py
document/: data.py  evaluation_small.json  order.json
evaluation/: ai_evaluation.py  analyze_stats.py  calculate.py  evaluation.py  evaluation_auto.py  realibility_eval.py
output/: evaluation_results_agent_both.csv  evaluation_results_final.csv  evaluation_results_final_autoagen.csv  evaluation_results_final_autoagen_nano.csv  evaluation_results_final_nano.csv  human_eval_intent.csv  merged_responses.csv  reliability_results_agent_intent.csv  reliability_results_agent_intent_auto.csv  reliability_results_agent_intent_auto_nano.csv  reliability_results_agent_intent_nano.csv  reliability_results_agent_intent_nano_1.csv
retriever/: const.py  embedding.py  milvus.py  utils.py  vector_store.py
